change the style of the Done btn

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<div id="inputdiv"class="header">
 				<h1 class="list-title">Your task list
 				</h1>
-				<input type="text" id="myInput" placeholder="Write down your task">
-				<button onclick="submitTask()" class="submitBtn">Submit</button> 
+				<div class="wrapper">
+					<input type="text" id="myInput" placeholder="Write down your task">
+					<button onclick="submitTask()" class="submitBtn">Submit</button> 
+				</div>
 		</div>
 		
 		<ul id="myUL">
